@@ -579,6 +579,7 @@ gda_parameter_get_g_type
 gda_parameter_declare_param_user
 gda_parameter_get_param_users
 gda_parameter_get_value
+gda_parameter_get_value_str
 gda_parameter_set_value
 gda_parameter_set_value_str
 gda_parameter_declare_invalid
@@ -615,6 +616,7 @@ gda_quark_list_copy
 gda_quark_list_add_from_string
 gda_quark_list_find
 gda_quark_list_remove
+gda_quark_list_foreach
 <SUBSECTION Standard>
 GDA_TYPE_QUARK_LIST
 gda_quark_list_get_type
@@ -871,7 +873,6 @@ gda_object_set_id
 gda_object_set_name
 gda_object_set_description
 gda_object_set_owner
-gda_object_get_id
 gda_object_get_id
 gda_object_get_name
 gda_object_get_description
