@@ -174,15 +174,6 @@ This class also introduces common attributes that can be exploited by the classe
 @Returns: 
 
 
-<!-- ##### FUNCTION gda_object_get_id ##### -->
-<para>
-
-</para>
-
-@object: 
-@Returns: 
-
-
 <!-- ##### FUNCTION gda_object_get_name ##### -->
 <para>
 
