@@ -95,3 +95,13 @@ Quark lists (lists of KEY=VALUE's)
 @name: 
 
 
+<!-- ##### FUNCTION gda_quark_list_foreach ##### -->
+<para>
+
+</para>
+
+@qlist: 
+@func: 
+@user_data: 
+
+
